Fixed bottom margin on mobile view.

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -445,7 +445,7 @@ main.loading {
     
     .preview-section {
         position: static;
-        margin-bottom: 8rem;
+        margin-bottom: 0;
     }
     
     fieldset {
